# theoos-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.en.md  README.md  alembic.ini  app.py  bot.py  docker-compose.yml  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  theoos-bot.xml  theoos-web.xml  wsgi.py
.cursor/rules/: theoos-project.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
blueprints/: api.py  auth.py  categorias.py  config.py  contas.py  dashboard.py  lista.py  orcamento.py  receber.py  relatorios.py  upload.py
docs/: API.md  DEPLOY.md  PROJECT_MEMORY.md
plans/: plano-de-melhorias-theoos.md  roadmap-theoos-2026-2027.md
scripts/: alembic_stamp.py  backup.py  gen_pwa_icons.py  install-winsw.ps1  winsw-bot.cmd  winsw-web.cmd
static/: manifest.json  sw.js
static/css/: theoos.css
static/js/: theoos-notify.js
templates/: base.html  categorias.html  config.html  config_usuarios.html  contas.html  importar_cartao.html  index.html  lista.html  login.html  orcamento.html  pesquisa.html  receber.html  relatorios.html  upload_nota.html
templates/dashboard/: _week.html
templates/errors/: 404.html  500.html
templates/macros/: bills.html  ui.html
tests/: test_boleto.py  test_bot.py  test_forecast.py  test_insights.py  test_ocr_offline.py  test_ofx.py  test_produtos.py  test_reconcile.py  test_reminders.py  test_routes.py  test_smoke.py  test_telegram_format.py
theoos/: __init__.py  audit.py  auth.py  backup.py  boleto.py  db_migrate.py  extensions.py  image_utils.py  insights.py  logging_setup.py  ocr_offline.py  ofx.py  pdf_report.py  produtos.py  reconcile.py  recurring.py  routes.py  telegram_format.py  telegram_lista.py
