[project]
name = "theoos"
version = "0.1.0"
description = "ThéoOS — family home operating system"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["__pycache__", ".venv", "venv", "instance", "static", "templates"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length (ruff format handles)
    "PLR0913", # too many arguments (Flask routes)
    "PLR2004", # magic value (UI strings, valores)
    "B008",  # function call in default argument (Flask routes)
    "SIM108", # ternary
    "UP031", # %-formatting in prompts (deixa legível)
    "RUF012", # mutable class attributes (Flask-SQLAlchemy models)
    # Pre-existing from Phase 0-3 (kept for now, fix in dedicated PRs):
    "E402",  # module import not at top (bot.py loads env before app import)
    "F401",  # imported but unused (re-exports in __init__.py)
    "F841",  # local variable assigned but never used (debug code)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLW2901", # for-loop variable overwritten (intentional in some cases)
    "PLW0603", # global statement (logging setup)
    "RUF001", # ambiguous unicode characters in UI strings (emojis are intentional)
    "RUF002", # ambiguous unicode characters in docstrings
    "RUF100", # noqa directive used but no rule matched
    "UP007", # use X | Y for type unions (compatibility with older syntax)
    "UP032", # use f-string instead of format
    "C408",  # unnecessary tuple/list/dict call
    "SIM102", # nested if statements
    "SIM105", # contextlib.suppress instead of try/except pass
    "SIM117", # nested with statements
    "W293",  # whitespace on blank line
    "B904",  # raise without from in except (pre-existing)
    "I001",  # import sort (Phase 0-3 code não está ordenado)
    "B011",  # do not call assert False
    "B905",  # zip() without explicit strict=
    "PLR1730", # if-stmt is too complex
    "F811",  # redefinition of unused name
    "RUF005", # unpack instead of concat
    "F601",  # multi-value key overwrite
    "UP012", # use f-string instead of format (similar a UP032)
    "UP015", # unnecessary mode param
    "E711",  # comparison to None should be 'is None'
    "PLR0402", # use from x import y
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "ARG", "FBT"]
"scripts/*" = ["S", "TID"]
"bot.py" = ["E402"]  # bot.py importa models depois de env setup (intencional)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
    "instance/",
    "static/",
    "templates/",
    "__pycache__/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:flask_sqlalchemy.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]
